--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,24 +2,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.hdefi.joesema.hdefi">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity
+            android:name=".LoginActivity"
+            android:label="Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ConceptsActivity" />
-        <activity android:name=".FormulasActivity" />
-        <activity android:name=".MessagesActivity" />
-        <activity android:name=".ReadingsActivity" />
-        <activity android:name=".PostActivity"></activity>
+
+        <activity
+            android:name=".ConceptsActivity"
+            android:label="Main Concepts" />
+        <activity
+            android:name=".FormulasActivity"
+            android:label="Formulas" />
+        <activity
+            android:name=".MessagesActivity"
+            android:label="Messages Blog" />
+        <activity
+            android:name=".ReadingsActivity"
+            android:label="Readings" />
+        <activity
+            android:name=".PostActivity"
+            android:label="Post" />
+        <activity
+            android:name=".RegistrationActivity"
+            android:label="Register"/>
     </application>
 
 </manifest>
