--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,10 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:11.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
     compile 'com.firebaseui:firebase-ui-database:2.0.1'
+    compile 'com.davemorrissey.labs:subsampling-scale-image-view:3.4.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
