Blog is fully functional with Deleting Readings are fully functional

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
         <activity
             android:name=".RegistrationActivity"
             android:label="Register" />
+        <activity
+            android:name=".BlogSingleActivity"
+            android:label="Single Post">
+
+        </activity>
     </application>
 
 </manifest>
